--- a/tratoria-ui/pom.xml
+++ b/tratoria-ui/pom.xml
@@ -46,6 +46,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>com.squareup.okhttp</groupId>
+		    <artifactId>okhttp</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
